template/css/toth.css
/* # ========== Generic */
.toth-body {
  font-family: 'Open Sans', sans-serif;
  color: #333;
}

/* # ========== Header */
.toth-navbar {
  background: #f1f1f1;
  float: left;
  width: 20%;
  position: fixed;
  box-shadow: 1px 0 5px rgba(51,51,51,0.2);
}

.toth-navigation {
  list-style: none;
  margin: 0;
  padding: 10px 0 30px;
  position: relative;
  height: 100vh;
  overflow: auto;
}

.toth-navbar-brand {
  display: block;
  text-align: center;
  padding: 5px 0;
  font-weight: bold;
  color: #444;
  background: #f1f1f1;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.toth-navigation-link {
  padding: 5px 20px;
  display: block;
  color: #222;
  border-left: 5px solid transparent;
  transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.toth-navigation-link:hover {
  border-color: #222;
}

.toth-guide-body {
  margin-left: 25%;
  float: left;
  width: 70%;
}

/* # ========== Sections */

.toth-section {
  margin-bottom: 2rem;
}

.toth-section dt {
  font-family: 'Menlo', 'Monaco', 'Ubuntu Mono', monospace;
  font-size: 1rem;
}

.toth-section h3 {
  text-transform: uppercase;
  font-size: 1.2rem;
  margin-top: 3rem;
}

.toth-section h3:before {
  content: '';
  width: 20px;
  display: block;
  height: 5px;
  background: #f1f1f1;
  vertical-align: middle;
  display: inline-block;
  margin-right: 10px;
}

/* # ========== Color palette */

.toth-color-grid {
  display: flex;
  flex-wrap: wrap;
}

.toth-color-item {
  padding: 0 5px;
  flex: 1 0 20%;;
  vertical-align: top;
  margin-bottom: 10px;
}

.toth-color-palette {
  border: 2px solid #f1f1f1;
  padding: 10px;
  font-size: 1rem;
  position: relative;
  height: 100px;;
}

.toth-color-text {
  background: #f1f1f1;
  color: #222;
  padding: 5px 0;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  text-align: center;
}

/* # ========== Loader */

.toth-loader {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: #f1f1f1;
  z-index: 9000;
  opacity: 0;
  visibility: hidden;
  transition: all 1s ease-in-out;
}

.toth-loader.is-open {
  opacity: 1;
  visibility: visible;
}

.toth-loader-text {
  text-transform: uppercase;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 50px;
  font-weight: bold;
}

.toth-loader-spinner {
  height: 40px;;
  width: 40px;
  position: relative;
  display: inline-block;
}

.toth-loader-spinner span {
  height: 20px;
  width: 20px;
  display: block;
  position: absolute;
}

.top-left {
  top: 0;
  left: 0;
  background: #D91E18;
  animation: one 1s linear infinite;
}

.top-right {
  top: 0;
  right: 0;
  background: #F4D03F;
  animation: two 1s linear infinite;
}

.bot-left {
  bottom: 0;
  left: 0;
  background: #87D37C;
  animation: three 1s linear infinite;
}

.bot-right {
  bottom: 0;
  right: 0;
  background: #4183D7;
  animation: four 2s linear infinite;
}

@keyframes one {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
  }
  50%, 75%, 100% {
    opacity: 0;
  }
}

@keyframes two {
  0%, 25% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  75%, 100% {
    opacity: 0;
  }
}

@keyframes three {
  0%, 25%, 50% {
    opacity: 0;
  }
  75% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes four {
  0%, 25%, 50%, 75% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

/* # ========== Code */

.hljs {
  padding: 0;
  background: #f1f1f1 !important;
  margin-top: -24px;
  padding-left: 24px;
}

/* # ========== Clipboard */

.toth-code {
  position: relative;
}

.toth-code:hover .toth-btn-clipboard {
  opacity: 1;
  visibility: visible;
}

.toth-btn-clipboard {
  font-family: 'Open Sans', sans-serif;
  font-size: .6rem;
  position: absolute;
  right: 0;
  border: 0;
  padding: 2px 5px 4px;
  cursor: pointer;
  top: 24px;
  right: 10px;
  border-radius: 4px;
  background: #222;
  color: #f1f1f1;
  opacity: 0;
  visibility: hidden;
  transition: all .3s;
  font-weight: bold;
  outline: 0;
}

.toth-btn-clipboard.is-ok:before {
  color: green;
  content: '✔ Copied';
  position: absolute;
  left: -60px;
}

.toth-btn-clipboard.is-not-ok:before {
  color: red;
  content: '✖ Error';
  position: absolute;
  left: -60px;
}

/* # ========== Devices */

@media screen and (max-width: 980px) {
  .toth-color-item {
    flex-basis: 33.333333%;
  }
}

@media screen and (max-width: 600px) {
  .toth-navbar,
  .toth-guide-body {
    float: none;
    width: 100%;
    margin: 0;
  }

  .toth-guide-body {
    padding-left: 20px;
    padding-right: 20px;
  }

  .toth-navbar {
    position: static;
  }

  .toth-navigation {
    height: auto;
    padding-bottom: 0;
  }

  .toth-navigation-link {
    padding: 20px 20px;
  }

  .toth-navbar-brand {
    display: none;
  }

  .toth-color-item {
    flex-basis: 50%;
  }
}

@media screen and (max-width: 400px) {
  .toth-color-item {
    flex-basis: 100%;
  }
}

